--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <p><span> phone : </span> +91 XXX-XXX-XXXX</p>
             </div> -->
             <div class="box">
-              <p><span> email : </span> 2052Udaygavada@gmail.com</p>
+              <p><span> email : </span> Udaygavada07@gmail.com</p>
               <p><span> place : </span> Pune, India
               
               </p>
@@ -101,7 +101,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1I7jBZxHfOrtlx1iQesjNQqvvDbXRMxbF/view?usp=drive_link" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1cdOlZqQWK7EeH_S8pNxlQj8RjhjV99LJ/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
