--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-envelope"></i>2052udaygavada@gmail.com</p>
+          <p> <i class="fas fa-envelope"></i>udaygavada07@gmail.com</p>
           <p> <i class="fas fa-map-marked-alt"></i>Pune, India</p>
           <div class="share">
 
